=============

Bugs fixed
----------

- :meth:`rpy2.rinterface.initr` was not skipping all initialization steps when the
  embedded R is already initialized by :mod:`rpy2` (contributed to issue #1190).

Changes
-------

- Warnings about R-related environment variables after initialization are downgraded
  to `INFO`-level and emitted by :obj:`rpy2.rinterface.logger` (solves issue #1190).


Release 3.6.1
=============

Bugs fixed
----------

- Clear warnings for deprecation of `rpy2.rinterface_lib.callbacks.obj_in_module`
  (issue #1181).

- Fix callback setup during initialization on Windows (issue #1183).

- In the R magic, setting options such as width, height, point size, etc. was broken
  in the new updated system to manage graphical devices.


Release 3.6.0
=============

New features
------------

- On systems where the default encoding is not utf-8, converting
  R strings to Python can result in decoding errors. The default
  encoding is now the system's encoding (rather than assume utf-8).
  This may provide a fix to issue #1018.

- Noteboook "R magic" features for ipython/jupyter support more
  graphical devices to render R graphics in notebooks. Registered
  devices are in :obj:`rpy2.ipython.rmags.graphics_devices`. This
  allows the specification of fallbacks when the preferred device is
  not available because of a missing R package. For SVG graphics,
  it will first try to use the R package `svglite` to produce
  lighter-weight SVG representations that are better when notebooks
  may include many figures and figure with large number of visual
  elements.

- Experimental minimalist set of optional conversion rules to
  convert Python :class:`list` objects to R vectors when all elements
  are of atomic type: :obj:`rpy2.robjects.flatlist_converter`. Those
  rules have been in used for the ipython/jupyter default converter.

- The setter :attr:`rpy2.robjects.vectors.Array.dim` is now implemented,
  allowing to change the dimension of an R array in place